cmake_minimum_required(VERSION 3.15)
project(StorageBufferManager)
set(CMAKE_CXX_STANDARD 11)
# Locate GTest
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
include_directories(include)
aux_source_directory(buffer SRC_LIST)
aux_source_directory(storage SRC_LIST)
add_executable(StorageBufferManager ${SRC_LIST} )
